--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body {
   <div class="main-navbar fade-in">
     <!-- Left section with company logo -->
     <div class="navbar-left">
-      <a href="index.html">
+      <a href="#index.html">
         <img src="assets/images/Extreme_FInal-removebg-preview.png" alt="GSBG Logo" class="main-logo" />
         
       </a>
@@ -822,15 +822,15 @@ body {
       <div class="footer-left">
         <!-- Company logo and info -->
         <div class="company-info">
-          <a href="index.html"><img src="assets/images/Extreme_Final2-removebg-preview.png" alt="GSBG Logo" class="footer-logo"></a>
+          <a href="#index.html"><img src="assets/images/Extreme_Final2-removebg-preview.png" alt="GSBG Logo" class="footer-logo"></a>
         </div>
         <p class="tagline">Trust. Value. Velocity</p>
         <!-- Copyright and legal links -->
         <p class="copyright">
-          <a href="legal/privacy_notice.html">Privacy Notice</a> |
-          <a href="legal/cookie_policy.html">Cookie Policy</a> |
-          <a href="legal/statutory-compliance.html">Statutory Compliance</a> |
-          <a href="legal/terms-of-use.html">Term of Use</a><br>
+          <a href="privacy_notice.html">Privacy Notice</a> |
+          <a href="cookie_policy.html">Cookie Policy</a> |
+          <a href="statutory-compliance.html">Statutory Compliance</a> |
+          <a href="terms-of-use.html">Term of Use</a><br>
           © 2025 GSBG. Managed by GSBG. All Rights Reserved.
           
 
